--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 
-<%= link_to "Back to index", articles_path, class: "articles_index" %>
+<%= link_to "Back to index", articles_path %>
+<%= link_to "Delete", article_path %>
