--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,5 @@
 <p><%= @article.body %></p>
 
 <%= link_to "Back to index", articles_path %>
-<%= link_to "Delete", article_path %>
+<%= link_to "Edit", edit_article_path(@article) %>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %>
