--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @article do |f| %>
+<%= form_for @article, html: {multipart: true} do |f| %>
   <ul>
     <% @article.errors.full_messages.each do |error| %>
       <li><%= error %></li>
@@ -17,6 +17,13 @@
   <p>
     <%= f.label :tag_list %>
     <%= f.text_field :tag_list %>
+  </p>
+  <% if @article.image.exists? %>
+    <p><%= image_tag @article.image.url %></p>
+  <% end %>
+  <p>
+    <%= f.label :image, "Attach an image" %>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit %>
